# cli

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.cargo/: config.toml
.github/workflows/: release.yml
crates/prita-cli/: Cargo.toml
crates/prita-cli/src/: cli.rs  error.rs  main.rs  output.rs
crates/prita-cli/src/commands/: articles.rs  auth.rs  list.rs  mod.rs  tags.rs  view.rs
crates/prita-client/: Cargo.toml  build.rs  schema.graphql
crates/prita-client/src/: client.rs  config.rs  error.rs  graphql.rs  lib.rs
