[workspace]
resolver = "3"
members = ["crates/prita-client", "crates/prita-cli"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/prita-app/cli"
homepage = "https://prita.app"

[workspace.dependencies]
prita-client = { path = "crates/prita-client" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
clap = { version = "4", features = ["derive"] }
directories = "5"
webbrowser = "1"

[profile.release]
strip = true
lto = "thin"
