[package]
name = "prita-cli"
description = "Command-line interface for Prita."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "prita"
path = "src/main.rs"

[dependencies]
prita-client.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
tokio.workspace = true
webbrowser.workspace = true
