[package]
name = "prita-client"
description = "Client library for the Prita API (used by the Prita CLI)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
reqwest.workspace = true
directories.workspace = true
cynic = "3"

[build-dependencies]
cynic-codegen = "3"
